# crewai-engineering-team

./: README.md  pyproject.toml
output/: account_manager.py
src/: crew.py  main.py
src/config/: agents.yaml  tasks.yaml
src/crew_ai_engg_team/: __init__.py
src/crew_ai_engg_team/config/: agents.yaml  tasks.yaml
src/crew_ai_engg_team/tools/: __init__.py  guardrails.py  sandboxed_test_runner.py
src/tools/: guardrails.py
