[project]
name = "crewai_engineering_team"
version = "1.0.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<0.109.0",
]

[project.scripts]
crewai_engineering_team = "main:run"
run_crew = "main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
